[metadata]
name = bedroom-pi
version = attr: bedroom_pi.__version__
author = Guenther Meyer
author_email = d.s.e@sordidmusic.com
description = Control bedroom lights with a Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/d-s-e/bedroom-pi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

